<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorbackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="16dp"
                android:padding="4dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/team_name"
                android:textSize="24sp"
                android:textColor="@color/playerTextColor"/>

            <TextView
                android:id="@+id/me_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="24dp"
                android:padding="4dp"
                android:fontFamily="sans-serif-light"
                android:text="0"
                android:textColor="@color/playerScoreTextColor"
                android:textSize="56sp"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:background="@color/buttons"
                android:onClick="randomMEtip"
                android:text="@string/one" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:background="@color/buttons"
                android:onClick="randomMEtap"
                android:text="@string/two" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:background="@color/buttons"
                android:onClick="randomMEtoe"
                android:text="@string/three" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="88dp"
            android:orientation="vertical"
            android:background="@android:color/darker_gray">/>
        </View>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="4dp"
                android:layout_marginTop="16dp"
                android:text="@string/team_name2"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/playerTextColor"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/you_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="4dp"
                android:text="0"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="24dp"
                android:textColor="#000000"
                android:textSize="56sp"
                android:fontFamily="sans-serif-light"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="randomYOUtip"
                android:text="@string/one"
                android:background="@color/buttons" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="randomYOUtap"
                android:text="@string/two"
                android:background="@color/buttons" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="randomYOUtoe"
                android:text="@string/three"
                android:background="@color/buttons"/>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/reset"
        android:onClick="resetScore"
        android:background="@color/buttons"/>
</RelativeLayout>
